code/dev/less/page.less
html,
body {
  height: 100%;
}

body {
  //padding-top: 60px;
}

.main-layout {
  overflow-x: auto;
}

.pointer {
  cursor: pointer;
}

.page-content {
  min-height: 100%;
}

.page-inner {
  //padding-top: 20px;
  //position: relative;
  background-color: #fafbfc;
}

.layout {
  height: 100%;
}

.page-title {
  margin-bottom: 24px;
}
.left-panel {
  transition: left ease-in-out 0.3s, padding ease-in-out 0.3s;
  position: absolute;
  left: 210px;
  right:0;
  top:0;
  bottom: 0;
}
section[main] {
  overflow: auto;
  background-color: @app-color-grey-200;
  height: 100%;
  .drop-shadow {
     position: absolute;
     top: 0;
     bottom: -6px;
     right: 0;
     left: 0;
     box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.4);
     height: 6px;
     pointer-events: none;
     -webkit-transition: opacity 0.5s;
     transition: opacity 0.5s;
     opacity: 1;
  }
  #mainPanel {
    display: -ms-flexbox;
    /* display: -webkit-flex; */
    display: flex;
    -ms-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
    -ms-flex: 1 1 0.000000001px;
    -webkit-flex: 1;
    flex: 1;
    -webkit-flex-basis: 0.000000001px;
    flex-basis: 0.000000001px;
    position: relative;
  }
  .paper-container{
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -ms-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
    position: relative;
    height: 100%;
  }
  #mainContainer {
    width: 100%;
    -ms-flex: 1 1 0.000000001px;
    -webkit-flex: 1;
    flex: 1;
    -webkit-flex-basis: 0.000000001px;
    flex-basis: 0.000000001px;
    position: relative;
    overflow-y: auto;
    overflow-x: hidden;
    -webkit-overflow-scrolling: touch;
  }
}

.max-height-pre {
  max-height: 400px;
  overflow: auto;
}

.log-details {
  cursor: pointer;
  &:hover {
    padding-left: 2px;
  }
}

.strong {
  font-weight: bold;
}

.spin {
  -webkit-animation: fa-spin 1s infinite linear;
  animation: fa-spin 1s infinite linear;
}

@-webkit-keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

@keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

.sortorder:after {
  content: '\25b2';
}

.sortorder.reverse:after {
  content: '\25bc';
}

.margin-top {
  margin-top: 2em;
}

.margin-sm-top-bottom {
  margin-top: 1em;
  margin-bottom: 1em;
}

table {
  table-layout: fixed !important;
}

table {
  th {}
  th.thin {
    width: 70px;
  }
  th.actions {
    width: 120px;
  }
  tbody {
    tr.disabled {
      &>td,
      &>th {
        color: @app-color-text-disabled;
        .spin {
          color: @app-color-grey;
        }
      }
    }
    tr.loading {
      &>td,
      &th {
        cursor: progress;
      }
    }
    .actions {
      a {
        margin-right: 10px;
      }
      .not-active {
        opacity: 0.65;
      }
    }
    .company-names,
    .purge-job-snippets,
    .source-name {
      white-space: normal;
      word-break: break-word;
      max-height: 50px;
    }
  }
}

.ui-select-multiple.ui-select-bootstrap,
input.ui-select-search {
  max-width: 550px;
}

.select2-container {
  min-width: 300px;
  & .select2-choice {
    background-color: #F8F8F8;
  }
}

select.form-control {
  max-width: 550px;
  margin-bottom: auto;
}

select.form-control.fixed {
  width: 150px;
}

select.form-control.fixed135 {
  width: 135px;
}

select.form-control.fixed155 {
  width: 155px;
}

select.form-control.fixed175 {
  width: 175px;
}

input.form-control {
  max-width: 550px;
}

.usage-report .form-group {
  margin-bottom: 6px;
}

.usage-report div.form-control {
  height: 30px;
  padding: 4px 8px;
}

.usage-report .form-horizontal .control-label {
  padding-top: 5px;
}

.usage-report .panel-title {
  font-size: 14px;
}

.usage-report a {
  cursor: pointer;
}

.popover {
  z-index: 999;
}

table tbody tr td {
  max-width: 300px;
  overflow-x: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

table tbody tr td.uppercase {
  text-transform: uppercase;
}

h1.signup {
  margin-top: auto;
  color: @app-color-grey-logo;
}

.list-input {
  border: none;
  background-color: transparent;
}


/* To hide "Powered by Ace" label in the JSON editor */

a.poweredBy {
  display: none;
}

input[type="radio"] {
  margin-left: 20px;
}

input[type="checkbox"] {
  margin-left: 20px;
}

// PAGE EDIT ACCOUNT PROFILE
.section-edit-company {
  padding-bottom: 30px;
  .select2-container {
    min-width: 100%;
    @media (min-width: @screen-sm) {
      min-width: 550px;
      max-width: 550px;
    }
    @media (max-width: 425px) {
      // min-width:380px;
      min-width: 100%;
    }
  }
}

.billing_contact_details {
  .select2-container {
    min-width: 100%;
    @media (min-width: 2559px) {
      min-width: 550px;
      max-width: 550px;
    }
    @media (max-width: 425px) {
      // min-width:380px;
      min-width: 100%;
    }
  }
}

//
textarea {
  &.form-control {
    // font-family: Courier;
    max-width: 550px;
  }
  &.text--courier {
    min-height: 30vh;
    font-size: smaller;
  }
}

.text--courier {
  font-family: Courier;
}

// Users List Page
.table {
  &.users-list {
    & .status-2fa {
      // TODO: choose color
      // &-enabled {
      //   color: @app-color-green;
      // }
      // &-disabled {
      //   color: @app-color-red;
      // }
    }
  }
}

form,
.form {
  & .error-messages {
    display: none;
    opacity: 1;
    line-height: 0%;
    transition: 0.4s linear all;
  }
  &.ng-invalid {
    &.ng-submitted {
      & .error-messages {
        display: block;
        transition: 0.4s linear all;
        &.ng-inactive {
          line-height: 50%;
          opacity: 0;
        }
        &.ng-active {
          line-height: 100%;
          opacity: 1;
        }
      }
    }
  }
  & .has-error .error-messages {
    display: block;
    transition: 0.4s linear all;
    &.ng-inactive {
      line-height: 50%;
      opacity: 0;
    }
    &.ng-active {
      display: block;
      line-height: 100%;
      opacity: 1;
    }
  }
  & .error-messages {
    color: @app-color-red;
    transition: 0.4s linear all;
    &.alert {
      &-text {
        transition: 1s linear all;
        color: @app-color-red;
        &.ng-enter {
          color: @app-color-blue;
          &.ng-enter-active {
            color: @app-color-green;
          }
        }
        &.ng-leave {
          color: @app-color-green;
          &.ng-leave-active {
            color: @app-color-green;
          }
        }
      }
    }
    &.ng-inactive {
      line-height: 50%;
      opacity: 0;
    }
    &.ng-active {
      line-height: 100%;
      opacity: 1;
    }
  }
}

// fix for toast
.toast-top-right {
  right: auto;
}

// cache purge
//
.modal-body .purges_container {
  max-height: 50vh;
  overflow-x: auto;
  margin-bottom: -15px;
}

// directiver "filter-time-period"
.filter-time-period {
  .form-control.date-picker.select2,
  &.date-picker-wrapper > input[type="text"] {
    margin-top: 5px;
  }
  & .date-picker-wrapper {
    // margin: 10px;
    position: relative;
    .over {
      margin-top: 5px;
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      width: 100%;
    }
  }
}

// headers on ssl_names modal windows
.modal-header {
  &--error {
    background-color: @app-color-red;
  }
  &--success {
    background-color: @app-color-green-200;
  }
}

.modal-title {
  &--error {
    color: @app-color-white;
  }
  &--success {
    color: @app-color-white;
  }
}
// side-menu
@media (max-width: 980px) {
  #scrim {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     opacity: 0;
     transition: opacity ease-in-out 0.38s, visibility ease-in-out 0.38s;
     background-color: rgba(0, 0, 0, 0.3);
  }
  .left-panel {
    left: 0!important
  }
}
// Tabs on Top Object Reports Pages
#topObjectsReportsTabs {

  & .tab-pane {
    margin: 20px 0px;
  }
  .nav-tabs>li {
    margin-bottom: -6px;
    > a {
      color: @app-side-menu-text-color;
    }
    &.active>a {
      color: @app-color-orange-logo;
    }
  }
}
.clearfix{
  margin-bottom: 8px;
}

